# vscode-mixed-language-debugging

./: CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  grading_cpp.py  grading_script.py  pyproject.toml
.github/workflows/: ci.yml
app/: CMakeLists.txt  cross-language-debugging_app.cpp  grading_app.cpp
include/cross-language-debugging/: cross-language-debugging.hpp
include/grading/: grading.hpp
python/crosslanguagedebugging/: __init__.py  _cross-language-debugging.cpp
python/grading/: __init__.py  _grading.cpp  core.py
src/: CMakeLists.txt  cross-language-debugging.cpp  grading.cpp
tests/: CMakeLists.txt  cross-language-debugging_t.cpp
tests/cpp/: grading_t.cpp
tests/python/: test_grading.py  test_python_bindings.py
